2008-05-10  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* gfortran.dg/fmt_t_5.f90: Take care of Windows CRLF line
	terminator.

2008-05-10  Kenneth Zadeck  <zadeck@naturalbridge.com>

	PR rtl-optimization/36185
	* g++.dg/opt/pr36185.C

2008-05-10  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	* write_to_null.f90: Rename to write_to_null.F90.
	* write_to_null.F90: On Windows, "nul" is the equivalent of the
	Unix /dev/null.

2008-05-10  Richard Sandiford  <rdsandiford@googlemail.com>

	PR rtl-optimization/33642
	* gcc.c-torture/compile/pr11832.c: Skip for MIPS.
	* gcc.c-torture/compile/pr33009.c: Likewise.

2008-05-09  Tom Tromey  <tromey@redhat.com>

	* gcc.dg/pr22231.c: Fix dg-error call.

2008-05-09  Tom Tromey  <tromey@redhat.com>

	PR preprocessor/22231:
	* gcc.dg/pr22231.c: New file.

2008-05-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36187
	* g++.dg/opt/pr36187.C: New testcase.

2008-05-08  Jan Sjodin  <jan.sjodin@amd.com>
	    Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/tree-ssa/data-dep-1.c: New.

2008-05-08  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/tree-ssa/20040911-1.c: Adjust.
	* gcc.dg/tree-ssa/20040517-1.c: Likewise.
	* gcc.dg/tree-ssa/pr26421.c: Likewise.
	* gcc.dg/tree-ssa/pr23382.c: Likewise.
	* gcc.dg/tree-ssa/alias-15.c: Likewise.
	* gcc.dg/tree-ssa/inline_asm-1.c: Likewise.
	* gcc.dg/tree-ssa/inline_asm-2.c: Likewise.
	* gcc.dg/tree-ssa/pta-fp.c: Likewise.
	* gcc.dg/tree-ssa/20031015-1.c: Likewise.
	* gcc.dg/tree-ssa/alias-12.c: Likewise.

2008-05-09  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/36162
	* gfortran.dg/module_widestring_1.f90: New test.

2008-05-08  Rafael Espindola  <espindola@google.com>

	* gcc.dg/vect/vect-111.c: Rename to no-trapping-math-vect-111.c
	* gcc.dg/vect/vect-ifcvt-11.c: Rename to no-trapping-math-vect-ifcvt-11.c
	* gcc.dg/vect/vect-ifcvt-12.c: Rename to no-trapping-math-vect-ifcvt-12.c